[project]
name = "timeline-backend"
version = "0.1.0"
description = "Timeline cache-first reader and enrichment backend"
requires-python = ">=3.12,<3.14"
dependencies = [
    "asyncpg>=0.29.0",
    "fastapi>=0.110.0",
    "httpx>=0.26.0",
    "langgraph>=1.2.0",
    "neo4j>=5.20.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "spacy>=3.7.0",
    "sqlalchemy>=2.0.25",
    "uvicorn[standard]>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.2.0",
]
embeddings = [
    "sentence-transformers>=3.0.0",
]
gliner2 = [
    "gliner2>=1.3.1",
    "gliner @ git+https://github.com/urchade/GLiNER.git",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
